# EGT_G15

./: CMakeLists.txt  Game15.cpp  Game15.h  Game15BoardView.cpp  Game15BoardView.h  game15  howto.txt  main.cpp  revert.txt
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  game15
